Simple Query Tests

--- a/ORM.Nhibernate/ORM.Nhibernate.csproj
+++ b/ORM.Nhibernate/ORM.Nhibernate.csproj
@@ -43,7 +43,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Model\Employee.hbm.xml" />
+    <EmbeddedResource Include="Model\Employee.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="nhibernate-configuration.xsd">
