--- a/ORM.Nhibernate.Tests/ORM.Nhibernate.Tests.csproj
+++ b/ORM.Nhibernate.Tests/ORM.Nhibernate.Tests.csproj
@@ -34,7 +34,7 @@
       <HintPath>..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="HibernatingRhinos.Profiler.Appender.v4.0">
-      <HintPath>..\..\IMS\IMS\Lib\HibernatingRhinos.Profiler.Appender.v4.0.dll</HintPath>
+      <HintPath>lib\HibernatingRhinos.Profiler.Appender.v4.0.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.3.1.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
