Configuring Child Collections

--- a/ORM.Nhibernate.Tests/ORM.Nhibernate.Tests.csproj
+++ b/ORM.Nhibernate.Tests/ORM.Nhibernate.Tests.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmployeeOrderTests.cs" />
     <Compile Include="EmployeeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
